--- a/index.html
+++ b/index.html
@@ -27,21 +27,53 @@
                         <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cursadas</a>
+                        <a class="nav-link" href="cursadas.html">Cursadas</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="alumno.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Alumno
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Ver carrito</a></li>
+                            <li><a class="dropdown-item" href="alumno.html">Mi cuenta</a></li>
+                            <li><a class="dropdown-item" href="carrito.html">Ver carrito</a></li>
                         </ul>
                     </li>
                 </ul>
             </div>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
         </div>
     </nav>
     <!-- Barra de navegación FIN -->
+
+    <!-- Modal Login INI -->
+    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="loginModalLabel">Ingreso a MyLS</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="mb-3">
+                            <label for="usuarioNombre" class="col-form-label">Nombre Usuario</label>
+                            <input type="text" class="form-control" id="usuarioNombre">
+                        </div>
+                        <div class="mb-3">
+                            <label for="usuarioClave" class="col-form-label">Contraseña</label>
+                            <input type="password" class="form-control" id="usuarioClave">
+                        </div>
+                    </form>
+                    <p>Los usuarios iniciales son Alumnos: Maria, Pedro, Gustavo. Profesor: Carlos.</p>
+                    <p>Contraseña para ellos: 123 🤪</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">Ingresar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal Login FIN -->
 
     <!-- Presentación MyLS INI -->
     <div class="container-fluid portada">
@@ -53,7 +85,7 @@
             </div>
             <div class="col-3">
                 <h2>MyLS es tú School</h2>
-                <p>Estamos comprometidos en ofrecerte la mejor educación para que orientes tus sueños y allanes el camino a tu gran furturo. Sabemos que tener el acompañamiento en el momento preciso y al lado de un grupo de calificados docentes será la clave para que consigas o encuentres tus propósitos. Ven, te acompañamos!</p>
+                <p>En My Little School estamos comprometidos en ofrecerte la mejor educación para que orientes tus sueños y allanes el camino a tu gran furturo. Sabemos que tener el acompañamiento en el momento preciso y al lado de un grupo de calificados docentes será la clave para que consigas o encuentres tus propósitos. Ven, te acompañamos!</p>
             </div>
         </div>
     </div>
