--- a/cursadas.html
+++ b/cursadas.html
@@ -24,10 +24,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="cursadas.html">Cursadas</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="cursadas.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Cursadas
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="cursadas.html">Ver Cursadas</a></li>
+                            <li><a class="dropdown-item" href="nuevo.html?tipo=profesor">Agregar Profesor</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -40,7 +46,6 @@
                     </li>
                 </ul>
             </div>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
         </div>
     </nav>
     <!-- Barra de navegación FIN -->
