--- a/index.html
+++ b/index.html
@@ -26,8 +26,14 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="cursadas.html">Cursadas</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="cursadas.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Cursadas
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="cursadas.html">Ver Cursadas</a></li>
+                            <li><a class="dropdown-item" href="nuevo.html?tipo=profesor">Agregar Profesor</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="alumno.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -40,7 +46,10 @@
                     </li>
                 </ul>
             </div>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
+            <div class="usuarioLogin">
+                <label id="usuarioLogin" class="col-form-label">Usuario</label>
+            </div>
+            <a href="login.html" class="btn btn-primary btn-lg botonIngresar" id="botonIngresar">Ingresar</a>
         </div>
     </nav>
     <!-- Barra de navegación FIN -->
@@ -92,23 +101,23 @@
     <!-- Presentación MyLS FIN -->
 
     <div class="carrusel">
-    <h2>Puedes aprender ...</h2>
-    <div class="container-sm">
-        <div id="carruselCursadas" class="carousel slide">
-            <div class="carousel-inner justify-content-center" id="contenidoCarrusel">
-
+        <div class="container-sm">
+            <h2>Puedes aprender ...</h2>
+            <div id="carruselCursadas" class="carousel slide">
+                <div class="carousel-inner justify-content-center" id="contenidoCarrusel">
+                <!-- </div> -->
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carruselCursadas" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Anterior</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carruselCursadas" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Siguiente</span>
+                    </button>
+                </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carruselCursadas" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Anterior</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carruselCursadas" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Siguiente</span>
-            </button>
         </div>
     </div>
-</div>
 
     <!-- script BOOSTRAP INI -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
