UPG grabación de notas y mejoras en la interfase

--- a/cursadas.html
+++ b/cursadas.html
@@ -68,7 +68,7 @@
     <div class="container-sm cursadas hayIngreso">
         <div class="cursadas-titulo">
             <h2>Cursadas</h2>
-            <button type="button" class="btn btn-primary" id="botonAgregarNota">Agregar Nota</button>
+            <button type="button" class="btn btn-primary" id="botonAgregarNota" href="#cursadaNota">Agregar Nota</button>
         </div>
         <!-- prueba de código INI -->
         <div class="accordion" id="acordeonCursadas">
@@ -153,7 +153,7 @@ xxxxxxxxxxx
                         </select>
                     </div>
                     <div class="col">
-                        <label for="formGroupExampleInput" class="form-label">Digite la Nota del Alumno</label>
+                        <label for="formGroupExampleInput" class="form-label">Nota del Alumno</label>
                         <input type="text" class="form-control" placeholder="Número entre 0 y 10" aria-label="Last name" id="vrNota">
                     </div>
                 </div>
