--- a/login.html
+++ b/login.html
@@ -20,10 +20,10 @@
             <a class="navbar-brand" href="./index.html">
                 <img src="./img/book-favicon.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                 My Little School</a>
-            <h2>Iniciar sesión</h2>
             <a href="nuevo.html" class="btn btn-secondary buttonRegistro" id="botonIngresar">Registrarse</a>
         </div>
-        <div class="p-5">
+        <h2 id="encabezadoLogin">Iniciar sesión</h2>
+        <div class="p-2">
             <form class="p-3">
                 <div class="mb-3">
                     <label for="usuarioNombre" class="col-form-label">Nombre Usuario</label>
