--- a/nuevo.html
+++ b/nuevo.html
@@ -20,13 +20,13 @@
             <a class="navbar-brand" href="./index.html">
                 <img src="./img/book-favicon.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                 My Little School</a>
-            <h2 id="titulo">Nuevos usuarios del sistema MyLS</h2>
             <a href="login.html" class="btn btn-secondary buttonLogin" id="botonIngresar">Ingresar</a>
         </div>
+        <h2 id="encabezadoLogin">Nuevos usuarios del sistema MyLS</h2>
         <div class="formularioIngreso">
             <div class="row filaFormularioIngreso">
                 <div class="col">
-                    <label for="usuarioNombre" class="form-label">Nombre Usuario</label>
+                    <label for="usuarioNombre" class="form-label">Nombre</label>
                     <input type="text" class="form-control" id="usuarioNombre">
                 </div>
                 <div class="col">
@@ -38,7 +38,7 @@
                     </select>
                 </div>
                 <div class="col">
-                    <label for="formGroupExampleInput" class="form-label">Digite su edad</label>
+                    <label for="formGroupExampleInput" class="form-label">Edad</label>
                     <input type="text" class="form-control" id="usuarioEdad">
                 </div>
             </div>          
